--- a/config.json
+++ b/config.json
@@ -11,20 +11,20 @@
     ],
     "birth_date": "2025-11-12T01:14:30",
     "images_fernando": {
-        "imagen-4.0-1.png": false,
-        "imagen-4.0-2.png": false,
-        "imagen-4.0-3.png": false,
-        "imagen-4.0-4.png": false,
-        "imagen-4.0-5.png": false,
-        "imagen-4.0-6.png": false,
-        "imagen-4.0-7.png": false,
-        "imagen-4.0-8.png": false,
-        "imagen-4.0-9.png": false,
-        "imagen-4.0-10.png": false,
-        "imagen-4.0-11.png": false,
-        "imagen-4.0-12.png": false,
-        "imagen-4.0-13.png": false,
-        "imagen-4.0-14.png": false,
+        "imagen-4.0-1.png": true,
+        "imagen-4.0-2.png": true,
+        "imagen-4.0-3.png": true,
+        "imagen-4.0-4.png": true,
+        "imagen-4.0-5.png": true,
+        "imagen-4.0-6.png": true,
+        "imagen-4.0-7.png": true,
+        "imagen-4.0-8.png": true,
+        "imagen-4.0-9.png": true,
+        "imagen-4.0-10.png": true,
+        "imagen-4.0-11.png": true,
+        "imagen-4.0-12.png": true,
+        "imagen-4.0-13.png": true,
+        "imagen-4.0-14.png": true,
         "imagen-4.0-15.png": false,
         "imagen-4.0-16.png": false,
         "imagen-4.0-17.png": false,
