Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -25,93 +25,93 @@
         "imagen-4.0-12.png": true,
         "imagen-4.0-13.png": true,
         "imagen-4.0-14.png": true,
-        "imagen-4.0-15.png": false,
-        "imagen-4.0-16.png": false,
-        "imagen-4.0-17.png": false,
-        "imagen-4.0-18.png": false,
-        "imagen-4.0-19.png": false,
-        "imagen-4.0-20.png": false,
-        "imagen-4.0-21.png": false,
-        "imagen-4.0-22.png": false,
-        "imagen-4.0-23.png": false,
-        "imagen-4.0-24.png": false,
-        "imagen-4.0-25.png": false,
-        "imagen-4.0-26.png": false,
-        "imagen-4.0-27.png": false,
-        "imagen-4.0-28.png": false,
-        "imagen-4.0-29.png": false,
-        "imagen-4.0-30.png": false,
-        "imagen-4.0-31.png": false,
-        "imagen-4.0-32.png": false,
-        "imagen-4.0-33.png": false,
-        "imagen-4.0-34.png": false,
-        "imagen-4.0-35.png": false,
-        "imagen-4.0-36.png": false,
-        "imagen-4.0-37.png": false,
-        "imagen-4.0-38.png": false,
-        "imagen-4.0-39.png": false,
-        "imagen-4.0-40.png": false,
-        "imagen-4.0-41.png": false,
-        "imagen-4.0-42.png": false,
-        "imagen-4.0-43.png": false,
-        "imagen-4.0-44.png": false,
-        "imagen-4.0-45.png": false,
-        "imagen-4.0-46.png": false,
-        "imagen-4.0-47.png": false,
-        "imagen-4.0-48.png": false,
-        "imagen-4.0-49.png": false,
-        "imagen-4.0-50.png": false,
-        "imagen-4.0-51.png": false,
-        "imagen-4.0-52.png": false,
-        "imagen-4.0-53.png": false,
-        "imagen-4.0-54.png": false,
-        "imagen-4.0-55.png": false,
-        "imagen-4.0-56.png": false,
-        "imagen-4.0-57.png": false,
-        "imagen-4.0-58.png": false,
-        "imagen-4.0-59.png": false,
-        "imagen-4.0-60.png": false,
-        "imagen-4.0-61.png": false,
-        "imagen-4.0-62.png": false,
-        "imagen-4.0-63.png": false,
-        "imagen-4.0-64.png": false,
-        "imagen-4.0-65.png": false,
-        "imagen-4.0-66.png": false,
-        "imagen-4.0-67.png": false,
-        "imagen-4.0-68.png": false,
-        "imagen-4.0-69.png": false,
-        "imagen-4.0-70.png": false,
-        "imagen-4.0-71.png": false,
-        "imagen-4.0-72.png": false,
-        "imagen-4.0-73.png": false,
-        "imagen-4.0-74.png": false,
-        "imagen-4.0-75.png": false,
-        "imagen-4.0-76.png": false,
-        "imagen-4.0-77.png": false,
-        "imagen-4.0-78.png": false,
-        "imagen-4.0-79.png": false,
-        "imagen-4.0-80.png": false,
-        "imagen-4.0-81.png": false,
-        "imagen-4.0-82.png": false,
-        "imagen-4.0-83.png": false,
-        "imagen-4.0-84.png": false,
-        "imagen-4.0-85.png": false,
-        "imagen-4.0-86.png": false,
-        "imagen-4.0-87.png": false,
-        "imagen-4.0-88.png": false,
-        "imagen-4.0-89.png": false,
-        "imagen-4.0-90.png": false,
-        "imagen-4.0-91.png": false,
-        "imagen-4.0-92.png": false,
-        "imagen-4.0-93.png": false,
-        "imagen-4.0-94.png": false,
-        "imagen-4.0-95.png": false,
-        "imagen-4.0-96.png": false,
-        "imagen-4.0-97.png": false,
-        "imagen-4.0-98.png": false,
-        "imagen-4.0-99.png": false,
-        "imagen-4.0-100.png": false,
-        "imagen-4.0-101.png": false,
+        "imagen-4.0-15.png": true,
+        "imagen-4.0-16.png": true,
+        "imagen-4.0-17.png": true,
+        "imagen-4.0-18.png": true,
+        "imagen-4.0-19.png": true,
+        "imagen-4.0-20.png": true,
+        "imagen-4.0-21.png": true,
+        "imagen-4.0-22.png": true,
+        "imagen-4.0-23.png": true,
+        "imagen-4.0-24.png": true,
+        "imagen-4.0-25.png": true,
+        "imagen-4.0-26.png": true,
+        "imagen-4.0-27.png": true,
+        "imagen-4.0-28.png": true,
+        "imagen-4.0-29.png": true,
+        "imagen-4.0-30.png": true,
+        "imagen-4.0-31.png": true,
+        "imagen-4.0-32.png": true,
+        "imagen-4.0-33.png": true,
+        "imagen-4.0-34.png": true,
+        "imagen-4.0-35.png": true,
+        "imagen-4.0-36.png": true,
+        "imagen-4.0-37.png": true,
+        "imagen-4.0-38.png": true,
+        "imagen-4.0-39.png": true,
+        "imagen-4.0-40.png": true,
+        "imagen-4.0-41.png": true,
+        "imagen-4.0-42.png": true,
+        "imagen-4.0-43.png": true,
+        "imagen-4.0-44.png": true,
+        "imagen-4.0-45.png": true,
+        "imagen-4.0-46.png": true,
+        "imagen-4.0-47.png": true,
+        "imagen-4.0-48.png": true,
+        "imagen-4.0-49.png": true,
+        "imagen-4.0-50.png": true,
+        "imagen-4.0-51.png": true,
+        "imagen-4.0-52.png": true,
+        "imagen-4.0-53.png": true,
+        "imagen-4.0-54.png": true,
+        "imagen-4.0-55.png": true,
+        "imagen-4.0-56.png": true,
+        "imagen-4.0-57.png": true,
+        "imagen-4.0-58.png": true,
+        "imagen-4.0-59.png": true,
+        "imagen-4.0-60.png": true,
+        "imagen-4.0-61.png": true,
+        "imagen-4.0-62.png": true,
+        "imagen-4.0-63.png": true,
+        "imagen-4.0-64.png": true,
+        "imagen-4.0-65.png": true,
+        "imagen-4.0-66.png": true,
+        "imagen-4.0-67.png": true,
+        "imagen-4.0-68.png": true,
+        "imagen-4.0-69.png": true,
+        "imagen-4.0-70.png": true,
+        "imagen-4.0-71.png": true,
+        "imagen-4.0-72.png": true,
+        "imagen-4.0-73.png": true,
+        "imagen-4.0-74.png": true,
+        "imagen-4.0-75.png": true,
+        "imagen-4.0-76.png": true,
+        "imagen-4.0-77.png": true,
+        "imagen-4.0-78.png": true,
+        "imagen-4.0-79.png": true,
+        "imagen-4.0-80.png": true,
+        "imagen-4.0-81.png": true,
+        "imagen-4.0-82.png": true,
+        "imagen-4.0-83.png": true,
+        "imagen-4.0-84.png": true,
+        "imagen-4.0-85.png": true,
+        "imagen-4.0-86.png": true,
+        "imagen-4.0-87.png": true,
+        "imagen-4.0-88.png": true,
+        "imagen-4.0-89.png": true,
+        "imagen-4.0-90.png": true,
+        "imagen-4.0-91.png": true,
+        "imagen-4.0-92.png": true,
+        "imagen-4.0-93.png": true,
+        "imagen-4.0-94.png": true,
+        "imagen-4.0-95.png": true,
+        "imagen-4.0-96.png": true,
+        "imagen-4.0-97.png": true,
+        "imagen-4.0-98.png": true,
+        "imagen-4.0-99.png": true,
+        "imagen-4.0-100.png": true,
+        "imagen-4.0-101.png": true,
         "imagen-4.0-102.png": false,
         "imagen-4.0-103.png": false,
         "imagen-4.0-104.png": false,
