Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -112,83 +112,83 @@
         "imagen-4.0-99.png": true,
         "imagen-4.0-100.png": true,
         "imagen-4.0-101.png": true,
-        "imagen-4.0-102.png": false,
-        "imagen-4.0-103.png": false,
-        "imagen-4.0-104.png": false,
-        "imagen-4.0-105.png": false,
-        "imagen-4.0-106.png": false,
-        "imagen-4.0-107.png": false,
-        "imagen-4.0-108.png": false,
-        "imagen-4.0-109.png": false,
-        "imagen-4.0-110.png": false,
-        "imagen-4.0-111.png": false,
-        "imagen-4.0-112.png": false,
-        "imagen-4.0-113.png": false,
-        "imagen-4.0-114.png": false,
-        "imagen-4.0-115.png": false,
-        "imagen-4.0-116.png": false,
-        "imagen-4.0-117.png": false,
-        "imagen-4.0-118.png": false,
-        "imagen-4.0-119.png": false,
-        "imagen-4.0-120.png": false,
-        "imagen-4.0-121.png": false,
-        "imagen-4.0-122.png": false,
-        "imagen-4.0-123.png": false,
-        "imagen-4.0-124.png": false,
-        "imagen-4.0-125.png": false,
-        "imagen-4.0-126.png": false,
-        "imagen-4.0-127.png": false,
-        "imagen-4.0-128.png": false,
-        "imagen-4.0-129.png": false,
-        "imagen-4.0-130.png": false,
-        "imagen-4.0-131.png": false,
-        "imagen-4.0-132.png": false,
-        "imagen-4.0-133.png": false,
-        "imagen-4.0-134.png": false,
-        "imagen-4.0-135.png": false,
-        "imagen-4.0-136.png": false,
-        "imagen-4.0-137.png": false,
-        "imagen-4.0-138.png": false,
-        "imagen-4.0-139.png": false,
-        "imagen-4.0-140.png": false,
-        "imagen-4.0-141.png": false,
-        "imagen-4.0-142.png": false,
-        "imagen-4.0-143.png": false,
-        "imagen-4.0-144.png": false,
-        "imagen-4.0-145.png": false,
-        "imagen-4.0-146.png": false,
-        "imagen-4.0-147.png": false,
-        "imagen-4.0-148.png": false,
-        "imagen-4.0-149.png": false,
-        "imagen-4.0-150.png": false,
-        "imagen-4.0-151.png": false,
-        "imagen-4.0-152.png": false,
-        "imagen-4.0-153.png": false,
-        "imagen-4.0-154.png": false,
-        "imagen-4.0-155.png": false,
-        "imagen-4.0-156.png": false,
-        "imagen-4.0-157.png": false,
-        "imagen-4.0-158.png": false,
-        "imagen-4.0-159.png": false,
-        "imagen-4.0-160.png": false,
-        "imagen-4.0-161.png": false,
-        "imagen-4.0-162.png": false,
-        "imagen-4.0-163.png": false,
-        "imagen-4.0-164.png": false,
-        "imagen-4.0-165.png": false,
-        "imagen-4.0-166.png": false,
-        "imagen-4.0-167.png": false,
-        "imagen-4.0-168.png": false,
-        "imagen-4.0-169.png": false,
-        "imagen-4.0-170.png": false,
-        "imagen-4.0-171.png": false,
-        "imagen-4.0-172.png": false,
-        "imagen-4.0-173.png": false,
-        "imagen-4.0-174.png": false,
-        "imagen-4.0-175.png": false,
-        "imagen-4.0-176.png": false,
-        "imagen-4.0-177.png": false,
-        "imagen-4.0-178.png": false,
+        "imagen-4.0-102.png": true,
+        "imagen-4.0-103.png": true,
+        "imagen-4.0-104.png": true,
+        "imagen-4.0-105.png": true,
+        "imagen-4.0-106.png": true,
+        "imagen-4.0-107.png": true,
+        "imagen-4.0-108.png": true,
+        "imagen-4.0-109.png": true,
+        "imagen-4.0-110.png": true,
+        "imagen-4.0-111.png": true,
+        "imagen-4.0-112.png": true,
+        "imagen-4.0-113.png": true,
+        "imagen-4.0-114.png": true,
+        "imagen-4.0-115.png": true,
+        "imagen-4.0-116.png": true,
+        "imagen-4.0-117.png": true,
+        "imagen-4.0-118.png": true,
+        "imagen-4.0-119.png": true,
+        "imagen-4.0-120.png": true,
+        "imagen-4.0-121.png": true,
+        "imagen-4.0-122.png": true,
+        "imagen-4.0-123.png": true,
+        "imagen-4.0-124.png": true,
+        "imagen-4.0-125.png": true,
+        "imagen-4.0-126.png": true,
+        "imagen-4.0-127.png": true,
+        "imagen-4.0-128.png": true,
+        "imagen-4.0-129.png": true,
+        "imagen-4.0-130.png": true,
+        "imagen-4.0-131.png": true,
+        "imagen-4.0-132.png": true,
+        "imagen-4.0-133.png": true,
+        "imagen-4.0-134.png": true,
+        "imagen-4.0-135.png": true,
+        "imagen-4.0-136.png": true,
+        "imagen-4.0-137.png": true,
+        "imagen-4.0-138.png": true,
+        "imagen-4.0-139.png": true,
+        "imagen-4.0-140.png": true,
+        "imagen-4.0-141.png": true,
+        "imagen-4.0-142.png": true,
+        "imagen-4.0-143.png": true,
+        "imagen-4.0-144.png": true,
+        "imagen-4.0-145.png": true,
+        "imagen-4.0-146.png": true,
+        "imagen-4.0-147.png": true,
+        "imagen-4.0-148.png": true,
+        "imagen-4.0-149.png": true,
+        "imagen-4.0-150.png": true,
+        "imagen-4.0-151.png": true,
+        "imagen-4.0-152.png": true,
+        "imagen-4.0-153.png": true,
+        "imagen-4.0-154.png": true,
+        "imagen-4.0-155.png": true,
+        "imagen-4.0-156.png": true,
+        "imagen-4.0-157.png": true,
+        "imagen-4.0-158.png": true,
+        "imagen-4.0-159.png": true,
+        "imagen-4.0-160.png": true,
+        "imagen-4.0-161.png": true,
+        "imagen-4.0-162.png": true,
+        "imagen-4.0-163.png": true,
+        "imagen-4.0-164.png": true,
+        "imagen-4.0-165.png": true,
+        "imagen-4.0-166.png": true,
+        "imagen-4.0-167.png": true,
+        "imagen-4.0-168.png": true,
+        "imagen-4.0-169.png": true,
+        "imagen-4.0-170.png": true,
+        "imagen-4.0-171.png": true,
+        "imagen-4.0-172.png": true,
+        "imagen-4.0-173.png": true,
+        "imagen-4.0-174.png": true,
+        "imagen-4.0-175.png": true,
+        "imagen-4.0-176.png": true,
+        "imagen-4.0-177.png": true,
+        "imagen-4.0-178.png": true,
         "imagen-4.0-179.png": false,
         "imagen-4.0-180.png": false,
         "imagen-4.0-181.png": false,
