Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -189,46 +189,46 @@
         "imagen-4.0-176.png": true,
         "imagen-4.0-177.png": true,
         "imagen-4.0-178.png": true,
-        "imagen-4.0-179.png": false,
-        "imagen-4.0-180.png": false,
-        "imagen-4.0-181.png": false,
-        "imagen-4.0-182.png": false,
-        "imagen-4.0-183.png": false,
-        "imagen-4.0-184.png": false,
-        "imagen-4.0-185.png": false,
-        "imagen-4.0-186.png": false,
-        "imagen-4.0-187.png": false,
-        "imagen-4.0-188.png": false,
-        "imagen-4.0-189.png": false,
-        "imagen-4.0-190.png": false,
-        "imagen-4.0-191.png": false,
-        "imagen-4.0-192.png": false,
-        "imagen-4.0-193.png": false,
-        "imagen-4.0-194.png": false,
-        "imagen-4.0-195.png": false,
-        "imagen-4.0-196.png": false,
-        "imagen-4.0-197.png": false,
-        "imagen-4.0-198.png": false,
-        "imagen-4.0-199.png": false,
-        "imagen-4.0-200.png": false,
-        "imagen-4.0-201.png": false,
-        "imagen-4.0-202.png": false,
-        "imagen-4.0-203.png": false,
-        "imagen-4.0-204.png": false,
-        "imagen-4.0-205.png": false,
-        "imagen-4.0-206.png": false,
-        "imagen-4.0-207.png": false,
-        "imagen-4.0-208.png": false,
-        "imagen-4.0-209.png": false,
-        "imagen-4.0-210.png": false,
-        "imagen-4.0-211.png": false,
-        "imagen-4.0-212.png": false,
-        "imagen-4.0-213.png": false,
-        "imagen-4.0-214.png": false,
-        "imagen-4.0-215.png": false,
-        "imagen-4.0-216.png": false,
-        "imagen-4.0-217.png": false,
-        "imagen-4.0-218.png": false,
+        "imagen-4.0-179.png": true,
+        "imagen-4.0-180.png": true,
+        "imagen-4.0-181.png": true,
+        "imagen-4.0-182.png": true,
+        "imagen-4.0-183.png": true,
+        "imagen-4.0-184.png": true,
+        "imagen-4.0-185.png": true,
+        "imagen-4.0-186.png": true,
+        "imagen-4.0-187.png": true,
+        "imagen-4.0-188.png": true,
+        "imagen-4.0-189.png": true,
+        "imagen-4.0-190.png": true,
+        "imagen-4.0-191.png": true,
+        "imagen-4.0-192.png": true,
+        "imagen-4.0-193.png": true,
+        "imagen-4.0-194.png": true,
+        "imagen-4.0-195.png": true,
+        "imagen-4.0-196.png": true,
+        "imagen-4.0-197.png": true,
+        "imagen-4.0-198.png": true,
+        "imagen-4.0-199.png": true,
+        "imagen-4.0-200.png": true,
+        "imagen-4.0-201.png": true,
+        "imagen-4.0-202.png": true,
+        "imagen-4.0-203.png": true,
+        "imagen-4.0-204.png": true,
+        "imagen-4.0-205.png": true,
+        "imagen-4.0-206.png": true,
+        "imagen-4.0-207.png": true,
+        "imagen-4.0-208.png": true,
+        "imagen-4.0-209.png": true,
+        "imagen-4.0-210.png": true,
+        "imagen-4.0-211.png": true,
+        "imagen-4.0-212.png": true,
+        "imagen-4.0-213.png": true,
+        "imagen-4.0-214.png": true,
+        "imagen-4.0-215.png": true,
+        "imagen-4.0-216.png": true,
+        "imagen-4.0-217.png": true,
+        "imagen-4.0-218.png": true,
         "imagen-4.0-219.png": false,
         "imagen-4.0-220.png": false,
         "imagen-4.0-221.png": false,
