Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -229,28 +229,28 @@
         "imagen-4.0-216.png": true,
         "imagen-4.0-217.png": true,
         "imagen-4.0-218.png": true,
-        "imagen-4.0-219.png": false,
-        "imagen-4.0-220.png": false,
-        "imagen-4.0-221.png": false,
-        "imagen-4.0-222.png": false,
-        "imagen-4.0-223.png": false,
-        "imagen-4.0-224.png": false,
-        "imagen-4.0-225.png": false,
-        "imagen-4.0-226.png": false,
-        "imagen-4.0-227.png": false,
-        "imagen-4.0-228.png": false,
-        "imagen-4.0-229.png": false,
-        "imagen-4.0-230.png": false,
-        "imagen-4.0-231.png": false,
-        "imagen-4.0-232.png": false,
-        "imagen-4.0-233.png": false,
-        "imagen-4.0-234.png": false,
-        "imagen-4.0-235.png": false,
-        "imagen-4.0-236.png": false,
-        "imagen-4.0-237.png": false,
-        "imagen-4.0-238.png": false,
-        "imagen-4.0-239.png": false,
-        "imagen-4.0-240.png": false,
+        "imagen-4.0-219.png": true,
+        "imagen-4.0-220.png": true,
+        "imagen-4.0-221.png": true,
+        "imagen-4.0-222.png": true,
+        "imagen-4.0-223.png": true,
+        "imagen-4.0-224.png": true,
+        "imagen-4.0-225.png": true,
+        "imagen-4.0-226.png": true,
+        "imagen-4.0-227.png": true,
+        "imagen-4.0-228.png": true,
+        "imagen-4.0-229.png": true,
+        "imagen-4.0-230.png": true,
+        "imagen-4.0-231.png": true,
+        "imagen-4.0-232.png": true,
+        "imagen-4.0-233.png": true,
+        "imagen-4.0-234.png": true,
+        "imagen-4.0-235.png": true,
+        "imagen-4.0-236.png": true,
+        "imagen-4.0-237.png": true,
+        "imagen-4.0-238.png": true,
+        "imagen-4.0-239.png": true,
+        "imagen-4.0-240.png": true,
         "imagen-4.0-241.png": false,
         "imagen-4.0-242.png": false,
         "imagen-4.0-243.png": false,
