Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -411,66 +411,66 @@
         "imagen-4.0-398.png": true,
         "imagen-4.0-399.png": true,
         "imagen-4.0-400.png": true,
-        "imagen-4.0-401.png": false,
-        "imagen-4.0-402.png": false,
-        "imagen-4.0-403.png": false,
-        "imagen-4.0-404.png": false,
-        "imagen-4.0-405.png": false,
-        "imagen-4.0-406.png": false,
-        "imagen-4.0-407.png": false,
-        "imagen-4.0-408.png": false,
-        "imagen-4.0-409.png": false,
-        "imagen-4.0-410.png": false,
-        "imagen-4.0-411.png": false,
-        "imagen-4.0-412.png": false,
-        "imagen-4.0-413.png": false,
-        "imagen-4.0-414.png": false,
-        "imagen-4.0-415.png": false,
-        "imagen-4.0-416.png": false,
-        "imagen-4.0-417.png": false,
-        "imagen-4.0-418.png": false,
-        "imagen-4.0-419.png": false,
-        "imagen-4.0-420.png": false,
-        "imagen-4.0-421.png": false,
-        "imagen-4.0-422.png": false,
-        "imagen-4.0-423.png": false,
-        "imagen-4.0-424.png": false,
-        "imagen-4.0-425.png": false,
-        "imagen-4.0-426.png": false,
-        "imagen-4.0-427.png": false,
-        "imagen-4.0-428.png": false,
-        "imagen-4.0-429.png": false,
-        "imagen-4.0-430.png": false,
-        "imagen-4.0-431.png": false,
-        "imagen-4.0-432.png": false,
-        "imagen-4.0-433.png": false,
-        "imagen-4.0-434.png": false,
-        "imagen-4.0-435.png": false,
-        "imagen-4.0-436.png": false,
-        "imagen-4.0-437.png": false,
-        "imagen-4.0-438.png": false,
-        "imagen-4.0-439.png": false,
-        "imagen-4.0-440.png": false,
-        "imagen-4.0-441.png": false,
-        "imagen-4.0-442.png": false,
-        "imagen-4.0-443.png": false,
-        "imagen-4.0-444.png": false,
-        "imagen-4.0-445.png": false,
-        "imagen-4.0-446.png": false,
-        "imagen-4.0-447.png": false,
-        "imagen-4.0-448.png": false,
-        "imagen-4.0-449.png": false,
-        "imagen-4.0-450.png": false,
-        "imagen-4.0-451.png": false,
-        "imagen-4.0-452.png": false,
-        "imagen-4.0-453.png": false,
-        "imagen-4.0-454.png": false,
-        "imagen-4.0-455.png": false,
-        "imagen-4.0-456.png": false,
-        "imagen-4.0-457.png": false,
-        "imagen-4.0-458.png": false,
-        "imagen-4.0-459.png": false,
-        "imagen-4.0-460.png": false,
+        "imagen-4.0-401.png": true,
+        "imagen-4.0-402.png": true,
+        "imagen-4.0-403.png": true,
+        "imagen-4.0-404.png": true,
+        "imagen-4.0-405.png": true,
+        "imagen-4.0-406.png": true,
+        "imagen-4.0-407.png": true,
+        "imagen-4.0-408.png": true,
+        "imagen-4.0-409.png": true,
+        "imagen-4.0-410.png": true,
+        "imagen-4.0-411.png": true,
+        "imagen-4.0-412.png": true,
+        "imagen-4.0-413.png": true,
+        "imagen-4.0-414.png": true,
+        "imagen-4.0-415.png": true,
+        "imagen-4.0-416.png": true,
+        "imagen-4.0-417.png": true,
+        "imagen-4.0-418.png": true,
+        "imagen-4.0-419.png": true,
+        "imagen-4.0-420.png": true,
+        "imagen-4.0-421.png": true,
+        "imagen-4.0-422.png": true,
+        "imagen-4.0-423.png": true,
+        "imagen-4.0-424.png": true,
+        "imagen-4.0-425.png": true,
+        "imagen-4.0-426.png": true,
+        "imagen-4.0-427.png": true,
+        "imagen-4.0-428.png": true,
+        "imagen-4.0-429.png": true,
+        "imagen-4.0-430.png": true,
+        "imagen-4.0-431.png": true,
+        "imagen-4.0-432.png": true,
+        "imagen-4.0-433.png": true,
+        "imagen-4.0-434.png": true,
+        "imagen-4.0-435.png": true,
+        "imagen-4.0-436.png": true,
+        "imagen-4.0-437.png": true,
+        "imagen-4.0-438.png": true,
+        "imagen-4.0-439.png": true,
+        "imagen-4.0-440.png": true,
+        "imagen-4.0-441.png": true,
+        "imagen-4.0-442.png": true,
+        "imagen-4.0-443.png": true,
+        "imagen-4.0-444.png": true,
+        "imagen-4.0-445.png": true,
+        "imagen-4.0-446.png": true,
+        "imagen-4.0-447.png": true,
+        "imagen-4.0-448.png": true,
+        "imagen-4.0-449.png": true,
+        "imagen-4.0-450.png": true,
+        "imagen-4.0-451.png": true,
+        "imagen-4.0-452.png": true,
+        "imagen-4.0-453.png": true,
+        "imagen-4.0-454.png": true,
+        "imagen-4.0-455.png": true,
+        "imagen-4.0-456.png": true,
+        "imagen-4.0-457.png": true,
+        "imagen-4.0-458.png": true,
+        "imagen-4.0-459.png": true,
+        "imagen-4.0-460.png": true,
         "imagen-4.0-461.png": false,
         "imagen-4.0-462.png": false,
         "imagen-4.0-463.png": false,
