Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -471,91 +471,91 @@
         "imagen-4.0-458.png": true,
         "imagen-4.0-459.png": true,
         "imagen-4.0-460.png": true,
-        "imagen-4.0-461.png": false,
-        "imagen-4.0-462.png": false,
-        "imagen-4.0-463.png": false,
-        "imagen-4.0-464.png": false,
-        "imagen-4.0-465.png": false,
-        "imagen-4.0-466.png": false,
-        "imagen-4.0-467.png": false,
-        "imagen-4.0-468.png": false,
-        "imagen-4.0-469.png": false,
-        "imagen-4.0-470.png": false,
-        "imagen-4.0-471.png": false,
-        "imagen-4.0-472.png": false,
-        "imagen-4.0-473.png": false,
-        "imagen-4.0-474.png": false,
-        "imagen-4.0-475.png": false,
-        "imagen-4.0-476.png": false,
-        "imagen-4.0-477.png": false,
-        "imagen-4.0-478.png": false,
-        "imagen-4.0-479.png": false,
-        "imagen-4.0-480.png": false,
-        "imagen-4.0-481.png": false,
-        "imagen-4.0-482.png": false,
-        "imagen-4.0-483.png": false,
-        "imagen-4.0-484.png": false,
-        "imagen-4.0-485.png": false,
-        "imagen-4.0-486.png": false,
-        "imagen-4.0-487.png": false,
-        "imagen-4.0-488.png": false,
-        "imagen-4.0-489.png": false,
-        "imagen-4.0-490.png": false,
-        "imagen-4.0-491.png": false,
-        "imagen-4.0-492.png": false,
-        "imagen-4.0-493.png": false,
-        "imagen-4.0-494.png": false,
-        "imagen-4.0-495.png": false,
-        "imagen-4.0-496.png": false,
-        "imagen-4.0-497.png": false,
-        "imagen-4.0-498.png": false,
-        "imagen-4.0-499.png": false,
-        "imagen-4.0-500.png": false,
-        "imagen-4.0-501.png": false,
-        "imagen-4.0-502.png": false,
-        "imagen-4.0-503.png": false,
-        "imagen-4.0-504.png": false,
-        "imagen-4.0-505.png": false,
-        "imagen-4.0-506.png": false,
-        "imagen-4.0-507.png": false,
-        "imagen-4.0-508.png": false,
-        "imagen-4.0-509.png": false,
-        "imagen-4.0-510.png": false,
-        "imagen-4.0-511.png": false,
-        "imagen-4.0-512.png": false,
-        "imagen-4.0-513.png": false,
-        "imagen-4.0-514.png": false,
-        "imagen-4.0-515.png": false,
-        "imagen-4.0-516.png": false,
-        "imagen-4.0-517.png": false,
-        "imagen-4.0-518.png": false,
-        "imagen-4.0-519.png": false,
-        "imagen-4.0-520.png": false,
-        "imagen-4.0-521.png": false,
-        "imagen-4.0-522.png": false,
-        "imagen-4.0-523.png": false,
-        "imagen-4.0-524.png": false,
-        "imagen-4.0-525.png": false,
-        "imagen-4.0-526.png": false,
-        "imagen-4.0-527.png": false,
-        "imagen-4.0-528.png": false,
-        "imagen-4.0-529.png": false,
-        "imagen-4.0-530.png": false,
-        "imagen-4.0-531.png": false,
-        "imagen-4.0-532.png": false,
-        "imagen-4.0-533.png": false,
-        "imagen-4.0-534.png": false,
-        "imagen-4.0-535.png": false,
-        "imagen-4.0-536.png": false,
-        "imagen-4.0-537.png": false,
-        "imagen-4.0-538.png": false,
-        "imagen-4.0-539.png": false,
-        "imagen-4.0-540.png": false,
-        "imagen-4.0-541.png": false,
-        "imagen-4.0-542.png": false,
-        "imagen-4.0-543.png": false,
-        "imagen-4.0-544.png": false,
-        "imagen-4.0-545.png": false,
+        "imagen-4.0-461.png": true,
+        "imagen-4.0-462.png": true,
+        "imagen-4.0-463.png": true,
+        "imagen-4.0-464.png": true,
+        "imagen-4.0-465.png": true,
+        "imagen-4.0-466.png": true,
+        "imagen-4.0-467.png": true,
+        "imagen-4.0-468.png": true,
+        "imagen-4.0-469.png": true,
+        "imagen-4.0-470.png": true,
+        "imagen-4.0-471.png": true,
+        "imagen-4.0-472.png": true,
+        "imagen-4.0-473.png": true,
+        "imagen-4.0-474.png": true,
+        "imagen-4.0-475.png": true,
+        "imagen-4.0-476.png": true,
+        "imagen-4.0-477.png": true,
+        "imagen-4.0-478.png": true,
+        "imagen-4.0-479.png": true,
+        "imagen-4.0-480.png": true,
+        "imagen-4.0-481.png": true,
+        "imagen-4.0-482.png": true,
+        "imagen-4.0-483.png": true,
+        "imagen-4.0-484.png": true,
+        "imagen-4.0-485.png": true,
+        "imagen-4.0-486.png": true,
+        "imagen-4.0-487.png": true,
+        "imagen-4.0-488.png": true,
+        "imagen-4.0-489.png": true,
+        "imagen-4.0-490.png": true,
+        "imagen-4.0-491.png": true,
+        "imagen-4.0-492.png": true,
+        "imagen-4.0-493.png": true,
+        "imagen-4.0-494.png": true,
+        "imagen-4.0-495.png": true,
+        "imagen-4.0-496.png": true,
+        "imagen-4.0-497.png": true,
+        "imagen-4.0-498.png": true,
+        "imagen-4.0-499.png": true,
+        "imagen-4.0-500.png": true,
+        "imagen-4.0-501.png": true,
+        "imagen-4.0-502.png": true,
+        "imagen-4.0-503.png": true,
+        "imagen-4.0-504.png": true,
+        "imagen-4.0-505.png": true,
+        "imagen-4.0-506.png": true,
+        "imagen-4.0-507.png": true,
+        "imagen-4.0-508.png": true,
+        "imagen-4.0-509.png": true,
+        "imagen-4.0-510.png": true,
+        "imagen-4.0-511.png": true,
+        "imagen-4.0-512.png": true,
+        "imagen-4.0-513.png": true,
+        "imagen-4.0-514.png": true,
+        "imagen-4.0-515.png": true,
+        "imagen-4.0-516.png": true,
+        "imagen-4.0-517.png": true,
+        "imagen-4.0-518.png": true,
+        "imagen-4.0-519.png": true,
+        "imagen-4.0-520.png": true,
+        "imagen-4.0-521.png": true,
+        "imagen-4.0-522.png": true,
+        "imagen-4.0-523.png": true,
+        "imagen-4.0-524.png": true,
+        "imagen-4.0-525.png": true,
+        "imagen-4.0-526.png": true,
+        "imagen-4.0-527.png": true,
+        "imagen-4.0-528.png": true,
+        "imagen-4.0-529.png": true,
+        "imagen-4.0-530.png": true,
+        "imagen-4.0-531.png": true,
+        "imagen-4.0-532.png": true,
+        "imagen-4.0-533.png": true,
+        "imagen-4.0-534.png": true,
+        "imagen-4.0-535.png": true,
+        "imagen-4.0-536.png": true,
+        "imagen-4.0-537.png": true,
+        "imagen-4.0-538.png": true,
+        "imagen-4.0-539.png": true,
+        "imagen-4.0-540.png": true,
+        "imagen-4.0-541.png": true,
+        "imagen-4.0-542.png": true,
+        "imagen-4.0-543.png": true,
+        "imagen-4.0-544.png": true,
+        "imagen-4.0-545.png": true,
         "imagen-4.0-546.png": false,
         "imagen-4.0-547.png": false,
         "imagen-4.0-548.png": false,
