Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -556,17 +556,17 @@
         "imagen-4.0-543.png": true,
         "imagen-4.0-544.png": true,
         "imagen-4.0-545.png": true,
-        "imagen-4.0-546.png": false,
-        "imagen-4.0-547.png": false,
-        "imagen-4.0-548.png": false,
-        "imagen-4.0-549.png": false,
-        "imagen-4.0-550.png": false,
-        "imagen-4.0-551.png": false,
-        "imagen-4.0-552.png": false,
-        "imagen-4.0-553.png": false,
-        "imagen-4.0-554.png": false,
-        "imagen-4.0-555.png": false,
-        "imagen-4.0-556.png": false,
+        "imagen-4.0-546.png": true,
+        "imagen-4.0-547.png": true,
+        "imagen-4.0-548.png": true,
+        "imagen-4.0-549.png": true,
+        "imagen-4.0-550.png": true,
+        "imagen-4.0-551.png": true,
+        "imagen-4.0-552.png": true,
+        "imagen-4.0-553.png": true,
+        "imagen-4.0-554.png": true,
+        "imagen-4.0-555.png": true,
+        "imagen-4.0-556.png": true,
         "imagen-4.0-557.png": false,
         "imagen-4.0-558.png": false,
         "imagen-4.0-559.png": false,
