Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -567,87 +567,87 @@
         "imagen-4.0-554.png": true,
         "imagen-4.0-555.png": true,
         "imagen-4.0-556.png": true,
-        "imagen-4.0-557.png": false,
-        "imagen-4.0-558.png": false,
-        "imagen-4.0-559.png": false,
-        "imagen-4.0-560.png": false,
-        "imagen-4.0-561.png": false,
-        "imagen-4.0-562.png": false,
-        "imagen-4.0-563.png": false,
-        "imagen-4.0-564.png": false,
-        "imagen-4.0-565.png": false,
-        "imagen-4.0-566.png": false,
-        "imagen-4.0-567.png": false,
-        "imagen-4.0-568.png": false,
-        "imagen-4.0-569.png": false,
-        "imagen-4.0-570.png": false,
-        "imagen-4.0-571.png": false,
-        "imagen-4.0-572.png": false,
-        "imagen-4.0-573.png": false,
-        "imagen-4.0-574.png": false,
-        "imagen-4.0-575.png": false,
-        "imagen-4.0-576.png": false,
-        "imagen-4.0-577.png": false,
-        "imagen-4.0-578.png": false,
-        "imagen-4.0-579.png": false,
-        "imagen-4.0-580.png": false,
-        "imagen-4.0-581.png": false,
-        "imagen-4.0-582.png": false,
-        "imagen-4.0-583.png": false,
-        "imagen-4.0-584.png": false,
-        "imagen-4.0-585.png": false,
-        "imagen-4.0-586.png": false,
-        "imagen-4.0-587.png": false,
-        "imagen-4.0-588.png": false,
-        "imagen-4.0-589.png": false,
-        "imagen-4.0-590.png": false,
-        "imagen-4.0-591.png": false,
-        "imagen-4.0-592.png": false,
-        "imagen-4.0-593.png": false,
-        "imagen-4.0-594.png": false,
-        "imagen-4.0-595.png": false,
-        "imagen-4.0-596.png": false,
-        "imagen-4.0-597.png": false,
-        "imagen-4.0-598.png": false,
-        "imagen-4.0-599.png": false,
-        "imagen-4.0-600.png": false,
-        "imagen-4.0-601.png": false,
-        "imagen-4.0-602.png": false,
-        "imagen-4.0-603.png": false,
-        "imagen-4.0-604.png": false,
-        "imagen-4.0-605.png": false,
-        "imagen-4.0-606.png": false,
-        "imagen-4.0-607.png": false,
-        "imagen-4.0-608.png": false,
-        "imagen-4.0-609.png": false,
-        "imagen-4.0-610.png": false,
-        "imagen-4.0-611.png": false,
-        "imagen-4.0-612.png": false,
-        "imagen-4.0-613.png": false,
-        "imagen-4.0-614.png": false,
-        "imagen-4.0-615.png": false,
-        "imagen-4.0-616.png": false,
-        "imagen-4.0-617.png": false,
-        "imagen-4.0-618.png": false,
-        "imagen-4.0-619.png": false,
-        "imagen-4.0-620.png": false,
-        "imagen-4.0-621.png": false,
-        "imagen-4.0-622.png": false,
-        "imagen-4.0-623.png": false,
-        "imagen-4.0-624.png": false,
-        "imagen-4.0-625.png": false,
-        "imagen-4.0-626.png": false,
-        "imagen-4.0-627.png": false,
-        "imagen-4.0-628.png": false,
-        "imagen-4.0-629.png": false,
-        "imagen-4.0-630.png": false,
-        "imagen-4.0-631.png": false,
-        "imagen-4.0-632.png": false,
-        "imagen-4.0-633.png": false,
-        "imagen-4.0-634.png": false,
-        "imagen-4.0-635.png": false,
-        "imagen-4.0-636.png": false,
-        "imagen-4.0-637.png": false,
+        "imagen-4.0-557.png": true,
+        "imagen-4.0-558.png": true,
+        "imagen-4.0-559.png": true,
+        "imagen-4.0-560.png": true,
+        "imagen-4.0-561.png": true,
+        "imagen-4.0-562.png": true,
+        "imagen-4.0-563.png": true,
+        "imagen-4.0-564.png": true,
+        "imagen-4.0-565.png": true,
+        "imagen-4.0-566.png": true,
+        "imagen-4.0-567.png": true,
+        "imagen-4.0-568.png": true,
+        "imagen-4.0-569.png": true,
+        "imagen-4.0-570.png": true,
+        "imagen-4.0-571.png": true,
+        "imagen-4.0-572.png": true,
+        "imagen-4.0-573.png": true,
+        "imagen-4.0-574.png": true,
+        "imagen-4.0-575.png": true,
+        "imagen-4.0-576.png": true,
+        "imagen-4.0-577.png": true,
+        "imagen-4.0-578.png": true,
+        "imagen-4.0-579.png": true,
+        "imagen-4.0-580.png": true,
+        "imagen-4.0-581.png": true,
+        "imagen-4.0-582.png": true,
+        "imagen-4.0-583.png": true,
+        "imagen-4.0-584.png": true,
+        "imagen-4.0-585.png": true,
+        "imagen-4.0-586.png": true,
+        "imagen-4.0-587.png": true,
+        "imagen-4.0-588.png": true,
+        "imagen-4.0-589.png": true,
+        "imagen-4.0-590.png": true,
+        "imagen-4.0-591.png": true,
+        "imagen-4.0-592.png": true,
+        "imagen-4.0-593.png": true,
+        "imagen-4.0-594.png": true,
+        "imagen-4.0-595.png": true,
+        "imagen-4.0-596.png": true,
+        "imagen-4.0-597.png": true,
+        "imagen-4.0-598.png": true,
+        "imagen-4.0-599.png": true,
+        "imagen-4.0-600.png": true,
+        "imagen-4.0-601.png": true,
+        "imagen-4.0-602.png": true,
+        "imagen-4.0-603.png": true,
+        "imagen-4.0-604.png": true,
+        "imagen-4.0-605.png": true,
+        "imagen-4.0-606.png": true,
+        "imagen-4.0-607.png": true,
+        "imagen-4.0-608.png": true,
+        "imagen-4.0-609.png": true,
+        "imagen-4.0-610.png": true,
+        "imagen-4.0-611.png": true,
+        "imagen-4.0-612.png": true,
+        "imagen-4.0-613.png": true,
+        "imagen-4.0-614.png": true,
+        "imagen-4.0-615.png": true,
+        "imagen-4.0-616.png": true,
+        "imagen-4.0-617.png": true,
+        "imagen-4.0-618.png": true,
+        "imagen-4.0-619.png": true,
+        "imagen-4.0-620.png": true,
+        "imagen-4.0-621.png": true,
+        "imagen-4.0-622.png": true,
+        "imagen-4.0-623.png": true,
+        "imagen-4.0-624.png": true,
+        "imagen-4.0-625.png": true,
+        "imagen-4.0-626.png": true,
+        "imagen-4.0-627.png": true,
+        "imagen-4.0-628.png": true,
+        "imagen-4.0-629.png": true,
+        "imagen-4.0-630.png": true,
+        "imagen-4.0-631.png": true,
+        "imagen-4.0-632.png": true,
+        "imagen-4.0-633.png": true,
+        "imagen-4.0-634.png": true,
+        "imagen-4.0-635.png": true,
+        "imagen-4.0-636.png": true,
+        "imagen-4.0-637.png": true,
         "imagen-4.0-638.png": false,
         "imagen-4.0-639.png": false,
         "imagen-4.0-640.png": false,
