Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -760,39 +760,39 @@
         "imagen-4.0-747.png": true,
         "imagen-4.0-748.png": true,
         "imagen-4.0-749.png": true,
-        "imagen-4.0-750.png": false,
-        "imagen-4.0-751.png": false,
-        "imagen-4.0-752.png": false,
-        "imagen-4.0-753.png": false,
-        "imagen-4.0-754.png": false,
-        "imagen-4.0-755.png": false,
-        "imagen-4.0-756.png": false,
-        "imagen-4.0-757.png": false,
-        "imagen-4.0-758.png": false,
-        "imagen-4.0-759.png": false,
-        "imagen-4.0-760.png": false,
-        "imagen-4.0-761.png": false,
-        "imagen-4.0-762.png": false,
-        "imagen-4.0-763.png": false,
-        "imagen-4.0-764.png": false,
-        "imagen-4.0-765.png": false,
-        "imagen-4.0-766.png": false,
-        "imagen-4.0-767.png": false,
-        "imagen-4.0-768.png": false,
-        "imagen-4.0-769.png": false,
-        "imagen-4.0-770.png": false,
-        "imagen-4.0-771.png": false,
-        "imagen-4.0-772.png": false,
-        "imagen-4.0-773.png": false,
-        "imagen-4.0-774.png": false,
-        "imagen-4.0-775.png": false,
-        "imagen-4.0-776.png": false,
-        "imagen-4.0-777.png": false,
-        "imagen-4.0-778.png": false,
-        "imagen-4.0-779.png": false,
-        "imagen-4.0-780.png": false,
-        "imagen-4.0-781.png": false,
-        "imagen-4.0-782.png": false,
+        "imagen-4.0-750.png": true,
+        "imagen-4.0-751.png": true,
+        "imagen-4.0-752.png": true,
+        "imagen-4.0-753.png": true,
+        "imagen-4.0-754.png": true,
+        "imagen-4.0-755.png": true,
+        "imagen-4.0-756.png": true,
+        "imagen-4.0-757.png": true,
+        "imagen-4.0-758.png": true,
+        "imagen-4.0-759.png": true,
+        "imagen-4.0-760.png": true,
+        "imagen-4.0-761.png": true,
+        "imagen-4.0-762.png": true,
+        "imagen-4.0-763.png": true,
+        "imagen-4.0-764.png": true,
+        "imagen-4.0-765.png": true,
+        "imagen-4.0-766.png": true,
+        "imagen-4.0-767.png": true,
+        "imagen-4.0-768.png": true,
+        "imagen-4.0-769.png": true,
+        "imagen-4.0-770.png": true,
+        "imagen-4.0-771.png": true,
+        "imagen-4.0-772.png": true,
+        "imagen-4.0-773.png": true,
+        "imagen-4.0-774.png": true,
+        "imagen-4.0-775.png": true,
+        "imagen-4.0-776.png": true,
+        "imagen-4.0-777.png": true,
+        "imagen-4.0-778.png": true,
+        "imagen-4.0-779.png": true,
+        "imagen-4.0-780.png": true,
+        "imagen-4.0-781.png": true,
+        "imagen-4.0-782.png": true,
         "imagen-4.0-783.png": false,
         "imagen-4.0-784.png": false,
         "imagen-4.0-785.png": false,
